create account, login, crud article

--- a/back-end/Comp1640_Final/appsettings.json
+++ b/back-end/Comp1640_Final/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=QVVMASTERIT\\SQLEXPRESS;Integrated Security=true;Database=Comp1640_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+
   "AllowedHosts": "*"
 }
