fix db arrangement in be

--- a/back-end/Comp1640_Final/appsettings.json
+++ b/back-end/Comp1640_Final/appsettings.json
@@ -7,9 +7,12 @@
   },
 
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=EL-ALMAS\\SQLEXPRESS;Integrated Security=true;Database=Comp1640_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-    "DefaultConnection": "Server=tcp:quocvietvi.database.windows.net,1433;Initial Catalog=Comp1640;Persist Security Info=False;User ID=Quocvietvi;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=EL-ALMAS\\SQLEXPRESS;Integrated Security=true;Database=Comp1640_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    //"DefaultConnection": "Server=tcp:quocvietvi.database.windows.net,1433;Initial Catalog=Comp1640;Persist Security Info=False;User ID=Quocvietvi;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "App": {
+    "Port": 7218
+  }
 }
