--- a/back-end/Comp1640_Final/appsettings.json
+++ b/back-end/Comp1640_Final/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
 
+  "Jwt": {
+    "Key": "my top secret key no one can know this key hahaha",
+    "Issuer": "https://localhost:7218",
+    "Audience": "https://localhost:7218"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=EL-ALMAS\\SQLEXPRESS;Integrated Security=true;Database=Comp1640_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
     //"DefaultConnection": "Server=tcp:quocvietvi.database.windows.net,1433;Initial Catalog=Comp1640;Persist Security Info=False;User ID=Quocvietvi;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
