--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.0-alpha.4",
