--- a/back-end/Comp1640_Final/appsettings.json
+++ b/back-end/Comp1640_Final/appsettings.json
@@ -12,8 +12,15 @@
     "Audience": "https://localhost:3000"
   },
 
+  "Cloudinary": {
+    "CloudName": "dizeyf6y0",
+    "ApiKey": "147341953755335",
+    "ApiSecret": "SvYFBSbzmFkEFa20dHrLgsh2_Tc"
+  },
+
   "ConnectionStrings": {
     //"DefaultConnection": "Server=EL-ALMAS\\SQLEXPRESS;Integrated Security=true;Database=Comp1640_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    //"DefaultConnection": "Server=LAPTOP-10L63H3P\\SQLEXPRESS;Integrated Security=true;Database=Comp1640;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
     "DefaultConnection": "Server=tcp:sql.bsite.net\\MSSQL2016;Initial Catalog=quocvietvi_;Persist Security Info=False;User ID=quocvietvi_;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
 
   },
