--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/signalr": "^8.0.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/x-data-grid": "^6.19.6",
@@ -28,7 +29,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-time-picker": "^6.6.0",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
