--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,7 +26,7 @@
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-time-picker": "^6.6.0",
     "react-toastify": "^10.0.5",
