--- a/back-end/UnitTest/UnitTest.csproj
+++ b/back-end/UnitTest/UnitTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Moq" Version="4.20.70" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Comp1640_Final\Comp1640_Final.csproj" />
   </ItemGroup>
 
