--- a/back-end/Comp1640_Final/appsettings.json
+++ b/back-end/Comp1640_Final/appsettings.json
@@ -21,8 +21,8 @@
   "ConnectionStrings": {
     //"DefaultConnection": "Server=EL-ALMAS\\SQLEXPRESS;Integrated Security=true;Database=Comp1640_Final;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
     //"DefaultConnection": "Server=LAPTOP-10L63H3P\\SQLEXPRESS;Integrated Security=true;Database=Comp1640;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-    "DefaultConnection": "Server=tcp:quocvietvi.database.windows.net,1433;Initial Catalog=Comp1640;Persist Security Info=False;User ID=Quocvietvi;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-
+    //"DefaultConnection": "Server=tcp:quocvietvi.database.windows.net,1433;Initial Catalog=Comp1640;Persist Security Info=False;User ID=Quocvietvi;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:sql.bsite.net\\MSSQL2016;Initial Catalog=quocvietvi_;Persist Security Info=False;User ID=quocvietvi_;Password=Quocviet@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=true;Connection Timeout=30;"
   },
 
   "AllowedHosts": "*",
