--- a/back-end/Comp1640_Final/appsettings.json
+++ b/back-end/Comp1640_Final/appsettings.json
@@ -9,7 +9,8 @@
   "Jwt": {
     "Key": "my top secret key no one can know this key hahaha",
     "Issuer": "https://localhost:7218",
-    "Audience": "https://localhost:3000"
+    //"Audience": "https://localhost:3000",
+    "Audience": "https://marketingmonday.onrender.com"
   },
 
   "Cloudinary": {
