--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     "react-spinners": "^0.13.8",
     "react-time-picker": "^6.6.0",
     "react-toastify": "^10.0.5",
+    "universal-cookie": "^7.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
